# trackhat-c-library-driver

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
scripts/: build_all_windows.bat  installer.iss  sign_artifact.bat
src/: CMakeLists.txt  CMakeSources.txt  crc.h  logger.cpp  logger.h  track-hat-driver.cpp  track-hat-driver.h  track-hat-types.h  track_hat_driver.cpp  track_hat_driver.h  track_hat_driver_internal.h  track_hat_messages.h  track_hat_parser.cpp  track_hat_parser.h  track_hat_types.h  track_hat_types_internal.h  usb_serial.h  usb_serial_windows.cpp
tests/: CMakeLists.txt
tests/test-app/: CMakeLists.txt  track-hat-test-app.cpp  track-hat-test-app.h  track_hat_test_app.cpp  track_hat_test_app.h
